# kv-derive

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yaml  publish.yaml
kv-derive/: Cargo.toml
kv-derive-impl/: Cargo.toml  README.md
kv-derive-impl/src/: consumer.rs  error.rs  from_iter.rs  from_mapping.rs  from_repr.rs  into_repr.rs  into_vec.rs  lib.rs  producer.rs  to_repr.rs  to_vec.rs
kv-derive-macro/: Cargo.toml  README.md
kv-derive-macro/src/: field.rs  lib.rs  opts.rs
kv-derive-util/: Cargo.toml  README.md
kv-derive-util/src/: chrono.rs  lib.rs
kv-derive/src/: consume.rs  field.rs  lib.rs  opts.rs  prelude.rs  produce.rs
kv-derive/tests/: from_iter.rs  to_vec.rs
src/: field.rs  from_iter.rs  lib.rs  opts.rs  to_vec.rs
tests/: from_iter.rs  from_slice.rs  tests.rs  to_vec.rs
