[package]
name = "kv-derive"
version = "0.1.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eigenein/kv-derive"
license = "MIT"
keywords = ["derive", "macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[features]
default = []

[dependencies]
darling = "0.14.1"
syn = "1.0.94"
quote = "1.0.18"
