[package]
name = "kv-derive-util"
description = "Additional utilities for `kv-derive`"
version = "0.0.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eigenein/kv-derive"
license = "MIT"
keywords = ["derive", "macro", "struct", "key-value"]
categories = []

[dependencies]
chrono = { version = "0.4.19", default-features = false, optional = true, features = ["clock"] }
kv-derive = { version = "0.0.0", path = "../kv-derive" }

[features]
default = []
