[package]
name = "kv-derive"
description = "Derive struct conversions from and to key-value vectors"
version = "0.0.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/eigenein/kv-derive"
license = "MIT"
keywords = ["derive", "macro", "struct", "key-value"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[features]
default = []

[dependencies]
anyhow = "1.0.57"
darling = "0.14.1"
syn = "1.0.94"
quote = "1.0.18"

kv-derive-impl = { version = "0.0.0", path = "../kv-derive-impl" }

[patch.crates-io]
kv-derive-impl = { path = "../kv-derive-impl" }
