[package]
name = "kv-derive"
description = "Derive struct conversions from and to key-value vectors"
version = "0.0.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/eigenein/kv-derive"
license = "MIT"
keywords = ["derive", "macro", "struct", "key-value"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[features]
default = []

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = "1.0.94"

kv-derive-impl = { version = "0.0.0", path = "../kv-derive-impl" }
